--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "Samweb",
-	"short_name": "Samweb",
+	"name": "Sam",
+	"short_name": "Sam",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "portrait",
